[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hush2-cli"
version = "0.1.0"
description = "Local encrypted secrets manager for developer and agent workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["secrets", "cli", "ai", "agent", "encryption", "vault"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1",
    "cryptography>=41.0",
    "keyring>=24.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/duriantaco/hush2"
Repository = "https://github.com/duriantaco/hush2"
Issues = "https://github.com/duriantaco/hush2/issues"
Changelog = "https://github.com/duriantaco/hush2/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
hush2 = "hush2.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/hush2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
